# ProjetFinal

./: .gitignore  CMakeLists.txt  README.md  advanced.c  advanced.h  advanced_functions.c  advanced_functions.h  csv_reader.c  csv_reader.h  filemanager.c  filemanager.h  html_exporter.c  html_exporter.h  htmlexport.c  htmlexport.h  main.c  people_manager.h  person.c  person.h  population.c  population.h  user_interface.c  user_interface.h
export/: genealogie.css  genealogie.html  genealogie2.css  genealogie2.html  geneaogie.css  person_1.html  person_3.html
include/: htmlexport.h  menu.h  person.h  population.h
result/: genealogie.css  info.css  main.js  template_trees.html
scripts/: start.sh  test.html
src/: advanced.c  filemanager.c  htmlexport.c  menu.c  person.c  population.c
