cmake_minimum_required(VERSION 3.25)
project(ProjetFinal C)

set(CMAKE_C_STANDARD 11)

add_executable(ProjetFinal main.c
        htmlexport.c
        htmlexport.c
        htmlexport.h
        person.c
        person.h
        person.h
        filemanager.c
        filemanager.h
        filemanager.h
        population.c
        population.h
        population.h
        user_interface.c
        user_interface.h
        advanced.c
        advanced.h
        advanced.h)
